--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
         document.querySelector('#pings').appendChild(li);
       };
     </script>
+
+    <script type="text/javascript" src="index.js"></script>
+
+
   </head>
   <body>
     <h1>Pings</h1>
